<resources>
    <string name="app_name">TriviYAAAS!</string>
    <string name="welcome_label">Welcome</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">Already have an account?</string>
    <string name="email_address_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="register_label">Register</string>
    <string name="mobile_number_label">Mobile Number</string>
    <string name="continue_with_google_label">Continue with Google</string>
    <string name="continue_with_facebook_label">Continue with Facebook</string>
    <string name="full_name_label">Full Name</string>
    <string name="set_password_label">Set Password</string>
    <string name="retype_password_label">Retype Password</string>
    <string name="test_your_knowledge_with_us_by_solving_quizes">Test your knowledge with us by solving quizes !</string>
    <string name="different_categories_available">Different categories available</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="attempted_quizzes">Attempted Quizzes</string>
    <string name="results">Results</string>
    <string name="logout">Logout</string>
    <string name="continue_quiz">continue quiz</string>
    <string name="good_morning_label">Good Morning</string>
    <string name="good_afternoon_label">Good Afternoon</string>
    <string name="good_evening_label">Good Evening</string>
    <string name="search_results_label">Search Results</string>
    <string name="available_quizzes">Available Quizzes</string>
    <string name="number_input_for_quiz">Number input for quiz</string>
    <string name="enter_number_1_10">Enter number (1–10)</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="mixed">Mixed</string>
    <string name="next">next</string>
    <string name="submit">Submit</string>
    <string name="end">End</string>
    <string name="did_you_know">Did you Know?</string>
    <string name="add">Add</string>
    <string name="score">Score:</string>
    <string name="select_category">Select Category</string>
    <string name="select_quiz">Select Quiz</string>
    <string name="question">Question</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="correct_option">Correct Option</string>
    <string name="difficulty">Difficulty</string>
    <string name="save_question">Save Question</string>
</resources>