<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/categoryDropdown"
            android:hint="@string/select_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:inputType="none"
            />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/quizDropdown"
            android:hint="@string/select_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="true"
            android:inputType="none"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/questionET"
            android:hint="@string/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/optionAET"
            android:hint="@string/option_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/optionBET"
            android:hint="@string/option_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/optionCET"
            android:hint="@string/option_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/optionDET"
            android:hint="@string/option_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/correctOption"
            android:hint="@string/correct_option"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:layout_marginStart="16dp" />

            <RadioButton
                android:id="@+id/radioHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:layout_marginStart="16dp" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveQuestionBtn"
            android:text="@string/save_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
