<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.QuizActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoIV"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/app_logo_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selectedQuizName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        tools:text="@string/categories"
        android:paddingEnd="24dp"
        android:maxLines="2"
        android:textColor="@color/textPrimary"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/scoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/score"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/marksTV"
        app:layout_constraintTop_toBottomOf="@id/logoIV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/marksTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="36dp"
        tools:text="5/6"
        android:textStyle="bold"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIV" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/previousContestsContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_top_background"
        android:minHeight="720dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/selectedQuizName">

        <include
            android:id="@+id/quizLayout"
            layout="@layout/quiz_questions_item"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/custom_button"
            android:text="@string/submit"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@id/quizLayout"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:layout_marginEnd="44dp"
            app:layout_constraintTop_toBottomOf="@id/quizLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>