<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground"
    android:padding="24dp"
    tools:context=".ui.registration.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logoIV"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/appNameTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/app_logo_small_transparent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appNameTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/textPrimary"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/logoIV"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topBarLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/welcomeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_label"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/textPrimary"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/signInInfoTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/textPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/welcomeTV" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/signUpTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/signInInfoTV"
                        app:layout_constraintTop_toBottomOf="@id/welcomeTV" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/emailAddressLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/email_address_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/signInInfoTV" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailAddressET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/email_address_label"
                        android:paddingHorizontal="8dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textPrimary"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailAddressLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/passwordLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:text="@string/password_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailAddressET" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/password_label"
                        android:paddingHorizontal="8dp"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/eye_open"
                        android:textColor="@color/textPrimary"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

                    <CheckBox
                        android:id="@+id/rememberCheckbox"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="18dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passwordET" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/rememberTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/remember_me_label"
                        android:textColor="@color/textSecondary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/rememberCheckbox"
                        app:layout_constraintTop_toBottomOf="@id/passwordET" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="28dp"
                        android:background="@drawable/custom_button"
                        android:text="@string/login_label"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rememberCheckbox" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

