<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground"
    android:padding="24dp"
    tools:context=".ui.registration.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/backButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:backgroundTint="@color/colorSurface"
                        android:src="@drawable/arrow_left"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/signupLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/sign_up"
                        android:textColor="@color/textPrimary"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/backButton" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/signInInfoTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/already_account"
                        android:textColor="@color/textPrimary"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/signupLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/loginTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/login_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/signInInfoTV"
                        app:layout_constraintTop_toBottomOf="@id/signupLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/fullNameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/full_name_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/signInInfoTV" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/fullNameET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/full_name_label"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/textPrimary"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fullNameLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/emailAddressLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/email_address_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fullNameET" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailAddressET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/email_address_label"
                        android:paddingHorizontal="8dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/textPrimary"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailAddressLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/setPasswordLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/set_password_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/emailAddressET" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/setPasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/set_password_label"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/textPrimary"
                        android:inputType="textPassword"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/setPasswordLabel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/retypePasswordLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:text="@string/retype_password_label"
                        android:textColor="@color/textPrimary"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/setPasswordET" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/retypePasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:inputType="textPassword"
                        android:background="@drawable/custom_edit_text"
                        android:hint="@string/retype_password_label"
                        android:paddingHorizontal="8dp"
                        android:textColor="@color/textPrimary"
                        android:textColorHint="@color/textSecondary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/retypePasswordLabel" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="28dp"
                        android:background="@drawable/custom_button"
                        android:text="@string/register_label"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/retypePasswordET" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>